Primera parte API

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings":{
+    "Default":"server=localhost; database=fichaAdr; user id=sa; password=daniel1976;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
