--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings":{
-    "Default":"server=localhost; database=fichaAdr; user id=sa; password=daniel1976;"
+    "Default":"server=localhost; database=fichaAdr; user id=sa; password=xxxxxx;"
   },
   "Logging": {
     "LogLevel": {
